# ChangeLog for sys-fs/squash_dir
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

squash_dir-11.2 (29 Oct 2011)

  29 Oct 2011; Martin Väth <martin@mvath.de>
  Version bump. Change location to gitorious

squash_dir-11.1 (22 Oct 2011)

  22 Oct 2011; Martin Väth <martin@mvath.de>
  Version bump. Improve squash_dir script (order and alignment)

squash_dir-11.0 (03 Sep 2011)

  03 Sep 2011; Martin Väth <martin@mvath.de>
  Version bump. Support COMPRESSION, default to xz. Update openrc interface.

squash_dir-10.21 (21 Jan 2011)

  21 Jan 2011; Martin Väth <martin@mvath.de>
  Version bump. Support for titlebar

squash_dir-10.20 (25 Dec 2010)

  04 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  25 Dec 2010; Martin Väth <martin@mvath.de>
  Version bump. Minor improvements in zsh-completion

squash_dir-10.19 (21 Dec 2010)

  21 Dec 2010; Martin Väth <martin@mvath.de>
  Version bump. Minor fixes in zsh-completion and configure.ac

squash_dir-10.18 (11 Dec 2010)

  11 Dec 2010; Martin Väth <martin@mvath.de>
  Version bump. Allow masks in squash_dir wrapper; minor changes in output

squash_dir-10.17 (09 Dec 2010)

  09 Dec 2010; Martin Väth <martin@mvath.de>
  Version bump. Improve zsh-completion

squash_dir-10.16 (27 Nov 2010)

  27 Nov 2010; Martin Väth <martin@mvath.de>
  Version bump. Provide zsh-completion

squash_dir-10.15 (26 Nov 2010)

  26 Nov 2010; Martin Väth <martin@mvath.de>
  Version bump. Do no longer default to MOUNT_AUFS=-i

squash_dir-10.14 (24 Nov 2010)

  24 Nov 2010; Martin Väth <martin@mvath.de>
  Version bump. Introduce MOUNT_AUFS_OPTS.
  Introduce KILL_FILE and option -k to the squash_dir wrapper script

squash_dir-10.13 (18 Nov 2010)

  18 Nov 2010; Martin Väth <martin@mvath.de>
  Version bump. Introduce option -n to the squash_dir wrapper script

squash_dir-10.12 (28 Aug 2010)

  28 Aug 2010; Martin Väth <martin@mvath.de>
  Version bump. Improve output of the squash_dir wrapper script
