@@ -1,1 +1,1 @@
-DIST squash_dir-11.2.tar.gz 25031 RMD160 b1a047147cf8ac08a1a1ff083b305198d761debf SHA1 ba442eb5b01b2ddc7019344d83fdb10d8ceef98a SHA256 2cd2467aed0adf4e9072db232a5f7b053b33fcd50c44bc7c04931477608a9bca
+DIST squash_dir-11.2.tar.gz 25039 RMD160 c2e63b0994addc50f583e16326c0134e9864e1ff SHA1 2b238240b150f76a5a0e2e1e3efd282fb717c082 SHA256 9a848bdf28db8e90e598082bc7b0e18862fe5cae69cd28668f4966b21a969f58
