@@ -2,10 +2,15 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+squash_dir-11.2-r1 (31 Oct 2011)
+
+  31 Oct 2011; Martin Väth <martin@mvath.de>
+  Change location.
+
 squash_dir-11.2 (29 Oct 2011)
 
   29 Oct 2011; Martin Väth <martin@mvath.de>
-  Version bump. Change location to gitorious
+  Version bump. Change location.
 
 squash_dir-11.1 (22 Oct 2011)
 
